Add stats of an user left panel like GitHub

--- a/app/index.html
+++ b/app/index.html
@@ -54,7 +54,7 @@
 
     <div class="footer">
       <div class="container">
-        <p>HEIG-VD - TWEB</p>
+        <p>HEIG-VD - TWEB - TE2</p>
       </div>
     </div>
 
